force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Order</fullName><default>false</default><label>Order</label></value>
            <value><fullName>Shipping</fullName><default>false</default><label>Shipping</label></value>
            <value><fullName>Returns</fullName><default>false</default><label>Returns</label></value>
            <value><fullName>Refund</fullName><default>false</default><label>Refund</label></value>
            <value><fullName>Product</fullName><default>false</default><label>Product</label></value>
            <value><fullName>Billing</fullName><default>false</default><label>Billing</label></value>
            <value><fullName>Account</fullName><default>false</default><label>Account</label></value>
            <value><fullName>Escalation</fullName><default>false</default><label>Escalation</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>