force-app/main/default/objects/Case/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <type>LongTextArea</type>
    <length>4000</length>
    <description>How the case was resolved.</description>
</CustomField>