force-app/main/default/objects/Case/fields/Service_Interaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Interaction_Id__c</fullName>
    <externalId>true</externalId>
    <label>Service Interaction Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
    <description>Idempotency key for storefront-captured service chat turns that must become solved audit cases even when the agent answers from context.</description>
</CustomField>