force-app/main/default/objects/Case/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <type>LongTextArea</type>
    <length>4000</length>
    <description>Situation summary for the case (what happened, context) so any agent can pick it up.</description>
</CustomField>