force-app/main/default/objects/Case/fields/Woo_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Woo_Order_Id__c</fullName>
    <label>Woo Order Id</label>
    <type>Text</type>
    <length>64</length>
</CustomField>