force-app/main/default/objects/Case/recordTypes/Billing.recordType-meta.xml
<RecordType>
    <fullName>Billing</fullName>
    <active>true</active>
    <businessProcess>Kwitko_Case_Process</businessProcess>
    <description>Billing, payment, and account-charge cases.</description>
    <label>Billing</label>
</RecordType>