force-app/main/default/objects/Case/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <businessProcess>Kwitko_Case_Process</businessProcess>
    <description>Product questions, account help, and general / uncategorized requests.</description>
    <label>General</label>
</RecordType>