force-app/main/default/objects/Case/recordTypes/Order_Issue.recordType-meta.xml
<RecordType>
    <fullName>Order_Issue</fullName>
    <active>true</active>
    <businessProcess>Kwitko_Case_Process</businessProcess>
    <description>Order, shipping, fulfillment, and delivery issues.</description>
    <label>Order Issue</label>
</RecordType>