force-app/main/default/objects/Case/recordTypes/Return_Refund.recordType-meta.xml
<RecordType>
    <fullName>Return_Refund</fullName>
    <active>true</active>
    <businessProcess>Kwitko_Case_Process</businessProcess>
    <description>Returns, refunds, exchanges, and store-credit cases.</description>
    <label>Return / Refund</label>
</RecordType>