force-app/main/default/objects/Case/validationRules/Resolution_Required_On_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Required_On_Close</fullName>
    <active>true</active>
    <description>Require a Resolution before closing a non-chat case. Chat cases are excluded so the AI agent's
        resolution path (CaseResolutionService) is never blocked.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, "Closed"),
  ISBLANK(Resolution__c),
  NOT(ISPICKVAL(Origin, "Chat"))
)</errorConditionFormula>
    <errorDisplayField>Resolution__c</errorDisplayField>
    <errorMessage>Please enter a Resolution before closing this case.</errorMessage>
</ValidationRule>