force-app/main/default/objects/Case/listViews/AllClosedCases.listView-meta.xml
<ListView>
    <fullName>AllClosedCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Category__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>OWNER_NAME</columns>
    <columns>Resolution__c</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters><field>CASES.CLOSED</field><operation>equals</operation><value>1</value></filters>
    <label>All Closed Cases</label>
</ListView>