force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Category__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.ESCALATION_STATE</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters><field>CASES.CLOSED</field><operation>equals</operation><value>0</value></filters>
    <label>All Open Cases</label>
</ListView>