force-app/main/default/objects/Case/listViews/Kwitko_Escalations_Case.listView-meta.xml
<ListView>
    <fullName>Kwitko_Escalations_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Category__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.ESCALATION_STATE</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>Kwitko Escalations</label>
    <queue>Kwitko_Escalations</queue>
    <sharedTo><allInternalUsers></allInternalUsers></sharedTo>
</ListView>